# FFMPEGvideoWriter

./: CMakeLists.txt  CMakeSettings.json  FFMPEGvideoWriter.cpp  FFMPEGvideoWriter.h  LICENSE  README.md  VideoWriterTest.cpp
